# Embedded

./: .cproject  .gitignore  .gitmodules  .project  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.txt  README~  cmake_install.cmake
doc/code_commenting/: function_comments.c  interface_comments.h
doc/pm/meetings/: meetingReport_20150504.docx  meetingReport_template.docx
doc/pm/sources/project_manual_latex/: project_manual.aux  project_manual.blg  project_manual.out  project_manual.synctex  project_manual.tcp  project_manual.tex  project_manual.toc  project_manual.tps
doc/se/: MasterQuad2015_BusLoad_estimation.xlsx
doc/se/code_commenting/: typedef_comments.h
doc/se/sources/Distance_measurement_MP/: Distance_measurement.aux  Distance_measurement.lof  Distance_measurement.lot  Distance_measurement.out  Distance_measurement.tcp  Distance_measurement.tex  Distance_measurement.toc  Distance_measurement.tps
doc/se/sources/HElicopter_Landing_MP/: HElicopter_Landing.lot  HElicopter_Landing.out  HElicopter_Landing.tcp  HElicopter_Landing.toc
doc/se/sources/I2C_adressing/: I2C_adressing.aux  I2C_adressing.lof  I2C_adressing.lot  (+4 more)
doc/sources/HElicopter_Landing_MP/: HElicopter_Landing.aux  HElicopter_Landing.lof  HElicopter_Landing.tex  HElicopter_Landing.tps
doc/sources/I2C_configuration_MP/: I2C_configuration.lpr  I2C_configuration.out  I2C_configuration.tcp  I2C_configuration.toc  I2C_configuration.tps
doc/sources/Kalman_Complementary/: Kalman_Complementary.lof  Kalman_Complementary.out  Kalman_Complementary.synctex  Kalman_Complementary.tcp  Kalman_Complementary.tex  Kalman_Complementary.toc  Kalman_Complementary.tps
doc/sources/Landing_Concept_MP/: Landing_Concept.aux  Landing_Concept.out
doc/sources/Result_Kalman_Complementary/: Result_Kalman_Complementary.aux  Result_Kalman_Complementary.lof  Result_Kalman_Complementary.out
doc/sources/Sensor_testing_concept_MP/: Sensor_testing_concept.tcp  Sensor_testing_concept.toc
doc/sources/development_environment_latex/: Development_environment.aux  Development_environment.synctex  Development_environment.tcp  Development_environment.toc  Development_environment.tps
doc/sources/software_concept_latex/: software_concept.blg  software_concept.out  software_concept.synctex  software_concept.tps
doc/sources/software_integration_concept/: software_integration_concept.blg  software_integration_concept.out  software_integration_concept.tcp  software_integration_concept.tex  software_integration_concept.toc
doc/sources/specification_sensor_model_MP/: sensor_model.lof  sensor_model.tcp  sensor_model.tex
doc/sources/technical_drawings_latex/: technical_drawings.blg  technical_drawings.lof  technical_drawings.out  technical_drawings.synctex  technical_drawings.tcp  technical_drawings.toc  technical_drawings.tps
doc/sources/user_manual_latex/: user_manual.tex  user_manual.tps
helikopter-kernel/: README  README.md
helikopter-src/: makeopts  makeopts-host
helikopter-src/hal/ADC/: HAL_ADC.c
helikopter-src/hal/GPIO/: GPIO.h  makefile
helikopter-src/hal/GPS/: GPS.c  makefile
helikopter-src/hal/IMU/: CMakeLists.txt  accMag_registers.h  imu.c  makefile
helikopter-src/hal/LASER/: LIDAR.c  makefile
helikopter-src/hal/MOTOR/: MOTOR.c
helikopter-src/hal/SENSOR/: Gyro.c  Sensor_Lib.c  barometer.c  batteryCheck.c  makefile
helikopter-src/hal/UDP/: udpLib.h
helikopter-src/hardware/: HElicopterLib.lbr
helikopter-src/hardware/HElicopterPlus/: .HElikopter_Plus.sch.lck  DESCRIPTION  HElikopterPlusKomplett.s#1  HElikopterPlusKomplett.s#2  HElikopterPlusKomplett.s#3  HElikopterPlusKomplett.s#4  HElikopterPlusKomplett.s#5  HElikopterPlusKomplett.s#6  HElikopterPlusKomplett.s#8  HElikopterPlusKomplett.sch  LED-DRIVER.s#4  LED-DRIVER.s#6  LED-DRIVER.s#7  LED-DRIVER.sch
helikopter-src/host/: .gitignore  READ-UDP-LINUX.elf  READ-UDP-WIN.elf  RaspberryDemoUdpSendHost.cpp  automaticStart.sh
helikopter-src/lld/: CMakeLists.txt  LLD_I2C.c  LLD_I2C.h  makefile
helikopter-src/main/: main.c  readSens.cpp
helikopter-src/matlab/: analyseIMUData.m  getData.m  makefile  myUdpSource_wrapper.c  udpImuSocket_wrapper.c  udpSigSocket.c
helikopter-src/matlab/model/: UdpImuSocket_Example.slx  UdpSigSocket_Complete_sfun.mexw64  myUdpSource.c  udpSigSocket.mexw64  udpSigSocket_wrapper.c
helikopter-src/remotecontroller/: getPpmDemuxValues.c  timeTrigger.c
helikopter-src/remotecontroller/tst/: getPpmDemuxValues.c  getTimeTriggerValues.c
helikopter-src/sig/: CMakeLists.txt  ImuFilter.c  Orientation.c  matrixLib.c  matrixLib.h
helikopter-src/sig/ImuFilter/: ImuFilter.c
helikopter-src/sig/inc/: Imufilter.h
impl/trunk/: .cproject  Doxyfile  Makefile  Makefile-Host  makeopts  makeopts-host
impl/trunk/MAIN/: .main.c.swp  CMakeLists.txt  HELIKOPTER.elf  HELIKOPTER.obd  HELIKOPTER.sym  main.c  main.h  makefile
impl/trunk/REMOTECONTROLLER/: Makefile
impl/trunk/doc/: doxygen_sqlite3.db  masterquad2015_code_documentation.tcp  masterquad2015_code_documentation.tps  refman.idx  refman.out  refman.toc
impl/trunk/hal/: Makefile  makeopts
impl/trunk/host/: READ-UDP-LINUX.elf  READ-UDP-WIN.elf  READ-UDP.elf  RaspberryDemoUdpReceiveHost.cpp  makefile  read-udp-host.c  read-udp-visualstudio.sln  read-udp-visualstudio.vcxproj  read-udp-visualstudio.vcxproj.filters  testscript.sh
impl/trunk/kern/: CMakeLists.txt  getPpmDemuxValue.c  ppmDemux.c  timeTrigger.c
impl/trunk/matlab/: CMakeLists.txt  makefile  udpImuLib.c  udpImuLib.h  udpLib.c  udpLib.h  udpSigLib.c  udpSigLib.h
impl/trunk/sig/: Imufilter.h  Orientation.h  OrientationDefines.h  makefile  matrixLib.h
package/: libhelikopter_1.0-1.deb  makePackage.sh
package/libhelikopter_1.0-1/DEBIAN/: control
repository/: HELIKOPTER  libhelikopter_1.0-1.deb  makeAllLibs.sh  makeHeli.sh
scratch/: ADS1015_sample100.c  Landing Concept.ppt  MasterQuad2015_RPi_Platform.pptx  _track+.url
scratch/doc_templates/Template_Quadrocopter_Latex/: Vorlage.synctex  Vorlage.tcp  Vorlage.tex  Vorlage.tps  vorlage.aux  vorlage.blg  vorlage.out  vorlage.toc
senseHat-src/: CMakeLists.txt
(+2435 files in other folders)
